[package]
name = "mysql_samp"
version = "0.1.0"
edition = "2024"
authors = ["NullSablex"]
repository = "https://github.com/NullSablex/mysql_samp"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
samp = { git = "https://github.com/NullSablex/rust-samp", rev = "e725e7f2a652ab9ac91a97d9fd2e1d01afe04549" }
mysql = { version = "27.0.0", default-features = false, features = ["default-rust"] }
chrono = "0.4"
log = "0.4"
